open package for tests
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>